--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -10,13 +10,11 @@ $font-cormorant: 'Cormorant',
 serif;
 
 $minmob: 320px;
-$mob_360: 360px;
 $mob_400: 400px;
 $mob_500: 500px;
 $mob_600: 600px;
 $mob_650: 650px;
 $tab_768: 768px;
-$tab_800: 800px;
 $tab_860: 860px;
 $tab_900: 900px;
 $tab_960: 960px;
@@ -267,7 +265,7 @@ p {
    width: 12rem;
    height: 3.2rem;
 
-   @media (max-width: $mob_360) {
+   @media (max-width: $mob_400) {
       width: 9.8rem;
       height: 2.6rem;
    }
@@ -895,7 +893,6 @@ p {
       margin: 0 auto;
       padding-top: 0;
    }
-
 }
 
 .swiper {
@@ -941,8 +938,6 @@ p {
          @media (max-width: $mob_400) {
             height: 238px;
          }
-
-
       }
 
       &_height-l {
@@ -1046,10 +1041,6 @@ p {
          @media (max-width: $tab_860) {
             font-size: 1.9rem;
          }
-
-         // @media (max-width: $tab_800) {
-         //    font-size: 1.9rem;
-         // }
 
          @media (max-width: $tab_768) {
             font-size: 2.8rem;
@@ -1337,9 +1328,6 @@ p {
             @media (max-width: $tab_860) {
                margin: 1.8rem 0 2rem;
                min-height: 45px;
-            }
-
-            @media (max-width: $tab_800) {
                font-size: 1.3rem;
             }
 
@@ -1389,11 +1377,7 @@ p {
          }
 
          @media (max-width: $tab_860) {
-            margin-bottom: 2rem;
-         }
-
-         @media (max-width: $tab_800) {
-            font-size: 1.9rem;
+            margin-bottom: 1.9rem;
          }
 
          @media (max-width: $tab_768) {
@@ -1830,11 +1814,11 @@ p {
       }
 
       @media (max-width: $mob_650) {
-         height: 100px;
+         height: 90px;
       }
 
       @media (max-width: $mob_400) {
-         height: 77px;
+         height: 59px;
       }
 
    }
@@ -1849,7 +1833,7 @@ p {
       }
 
       @media (max-width: $mob_400) {
-         margin: 2.2rem 0 2.6rem;
+         margin: 2.2rem 0 3.9rem;
       }
    }
 
@@ -1862,10 +1846,11 @@ p {
       margin-bottom: 4.7rem;
 
       @media (max-width: $tab_900) {
-         width: auto;
-         overflow-x: scroll;
-         overflow-y: hidden;
-         padding-bottom: 70px;
+         display: none;
+         // width: auto;
+         // overflow-x: scroll;
+         // overflow-y: hidden;
+         // padding-bottom: 70px;
       }
 
       @media (max-width: 500px) {
@@ -1996,6 +1981,36 @@ p {
 
    }
 }
+
+.slider-catalog {
+   display: none;
+
+   @media (max-width: $tab_900) {
+      display: block;
+      padding: 0;
+      overflow: visible;
+
+   }
+}
+
+.catalogSwiper {
+   &-wrapper {
+      width: auto;
+      // overflow-x: scroll;
+      // overflow-y: hidden;
+      padding-bottom: 70px;
+   }
+
+   &-slide {
+      text-align: center;
+   }
+
+   &-button-next,
+   &-button-prev {
+      display: none;
+   }
+}
+
 
 .catalog-grid {
    display: grid;
@@ -2651,8 +2666,6 @@ p {
       }
    }
 }
-
-.footer {}
 
 footer {
    border-top: 1px solid #d4d6cf;
